# interbotix_copilot

./: CMakeLists.txt  README.md  package.xml  pyproject.toml  setup.py
launch/: copilot.launch
scripts/: copilot
src/interbotix_copilot/: __init__.py  action_server.py  base_api.py  client.py  copilot.py  gui.py  logging_utils.py
srv/: Command.srv  Pressure.srv
