[tool.poetry]
name = "interbotix_copilot"
version = "0.1.0"
description = "Copilot for Interbotix Robot Arms"
authors = ["Bas <b.heijden@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
rospkg = "^1.3.0"
defusedxml = "^0.7.1"
netifaces = "^0.11.0"
PyQt5 = "^5.15.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
